# garment-dynamics-mcp

./: __main__.py  garment_dynamics_mcp.py  pyproject.toml
data/: color_interactions.json  fabric_physics.json  form_types.json  garment_catalog.json  visual_vocabulary.json
layers/: computation.py  synthesis.py  taxonomy.py
tests/: test_all.py
utils/: __init__.py  coordinates.py  fabric_physics.py  keyword_index.py
