[project]
name = "garment-dynamics"
version = "0.1.0"
description = "Garment taxonomy with fabric physics and compositional geometry"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
garment-dynamics = "garment_dynamics_mcp:mcp"
